@@ -140,6 +140,8 @@ API
 • Added |vim.lsp.is_enabled()| to check if a given LSP config has been enabled
   by |vim.lsp.enable()|.
 • |nvim_echo()| can set the |ui-messages| kind with which to emit the message.
+• |nvim_ui_send()| writes arbitrary data to a UI's stdout. Use this to write
+  escape sequences to the terminal when Nvim is running in the |TUI|.
 
 BUILD
 
